homepagina en contactpagina toegevoegd

--- a/Opdracht een/index.html
+++ b/Opdracht een/index.html
@@ -4,17 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Haal meer uit jouw website - de kracht van webontwikkeling en online data
-    </title>
+    <title>Jouw Website</title>
 </head>
 <body>
     <div class="banner">
-        <a href="index.html">Home</a>
-        <a href="Ervaring.html">Ervaring</a>
-        <a href="Profiel.html">Profiel</a>
-        <a href="#interessegebieden.html">Interessegebieden</a>
-        <a href="#contact.html">Contact</a>
+        <a href="#home">Home</a>
+        <a href="#ervaring">Ervaring</a>
+        <a href="#profiel">Profiel</a>
+        <a href="#interesses">Interessegebieden</a>
+        <a href="#contact">Contact</a>
     </div>
-   
+    <div class="content">
+        <h1><span class="orange-bg">Haal meer uit jouw website</span><br>
+            <br>
+            <span class="orange-bg">- de kracht van webontwikkeling en online data</span></h1>
+        <p>Stap binnen in mijn digitale wereld. Hier deel ik mijn reis van online marketing naar webontwikkeling. Mijn doel? Websites die niet alleen prachtig ogen, maar ook naadloos presteren. Dankzij data-analyse in online marketing leg ik de nadruk op gebruiksvriendelijkheid. Ontdek mijn projecten en zie hoe ik online marketingervaring omzet in webcreatie.</p>
+    </div>
+    <div class="over">
+        <div class="afbeelding-over">
+            <img src="Home 2.png" alt="online marketing">
+        </div>
+        <div class="content-over">
+            <h2>Van online marketing <br>
+                <br>
+                naar programmeren</h2>
+            <p>Van oorsprong online marketeer, raakte ik gefascineerd door gebruikersgedrag op het web. <br>
+                Deze fascinatie evolueerde naar een passie voor webontwikkeling.<br>
+                Gedreven door mijn streven naar een diepgaand begrip en effectieve online aanwezigheid, ben ik me gaan verdiepen in webstatistieken.</p>
+            <br>
+                <div class="cta">
+                <a href="Profiel.html">Ontdek hier mijn profiel!</a>
+            </div>
+        </div>
+    </div>
+    
+    <div class="interesses">
+        <h2>Ontdek mijn interessegebieden</h2>
+        <div class="interesses-opsomming">
+            <div class="interessegebieden">
+                <img src="Webdevelopment.jpg" alt="Webdevelopment">
+                <p>Webdevelopment</p>
+            </div>
+            <div class="interessegebieden">
+                <img src="SEO.jpg" alt="SEO">
+                <p>SEO</p>
+            </div>
+            <div class="interessegebieden">
+                <img src="Paid advertising.jpg" alt="Paid Advertising">
+                <p>Paid Advertising</p>
+            </div>
+        </div>
+    </div>
+
+    </div>
+
 </body>
 </html>
+
