interesse pagina toegevoegd

--- a/Opdracht een/Contact.html
+++ b/Opdracht een/Contact.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <div class="banner">
-        <a href="#home">Home</a>
-        <a href="#ervaring">Ervaring</a>
-        <a href="#profiel">Profiel</a>
-        <a href="#interesses">Interessegebieden</a>
+        <a href="index.html">Home</a>
+        <a href="Ervaring.html">Ervaring</a>
+        <a href="Profiel.html">Profiel</a>
+        <a href="Interessegebied.html">Interessegebieden</a>
         <a href="#contact">Contact</a>
     </div>
     <div class="contact-formulier">
@@ -41,5 +41,8 @@
             <input type="submit" value="Verstuur">
         </form>
     </div>
+    <footer>
+        <p>© 2023 Mijn Website</p>
+    </footer>
 </body>
 </html>
