--- a/Opdracht een/index.html
+++ b/Opdracht een/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Jouw Website</title>
+    <title>Website Valeria</title>
 </head>
 <body>
     <div class="banner">
-        <a href="#home">Home</a>
-        <a href="#ervaring">Ervaring</a>
-        <a href="#profiel">Profiel</a>
-        <a href="#interesses">Interessegebieden</a>
+        <a href="index.html">Home</a>
+        <a href="Ervaring.html">Ervaring</a>
+        <a href="Profiel.html">Profiel</a>
+        <a href="Interessegebied.html">Interessegebieden</a>
         <a href="#contact">Contact</a>
     </div>
     <div class="content">
@@ -55,7 +55,9 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        <p>© 2023 Mijn Website</p>
+    </footer>
     </div>
 
 </body>
