ervaring pagina toegevoegd

--- a/Opdracht een/Ervaring.html
+++ b/Opdracht een/Ervaring.html
@@ -1,17 +1,34 @@
-<div class="interesses">
-    <h2>Ontdek mijn interessegebieden</h2>
-    <div class="interesses-opsomming">
-        <div class="interessegebieden">
-            <img src="Webdevelopment.jpg" alt="Webdevelopment">
-            <p>Webdevelopment</p>
-        </div>
-        <div class="interessegebieden">
-            <img src="SEO.jpg" alt="SEO">
-            <p>SEO</p>
-        </div>
-        <div class="interessegebieden">
-            <img src="Paid advertising.jpg" alt="Paid Advertising">
-            <p>Paid Advertising</p>
-        </div>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ervaring</title>
+    <link rel="stylesheet" href="Ervaring.css">
+</head>
+<body>
+    <div class="banner">
+        <a href="index.html">Home</a>
+        <a href="Ervaring.html">Ervaring</a>
+        <a href="Profiel.html">Profiel</a>
+        <a href="Interessegebied.html">Interessegebieden</a>
+        <a href="#contact">Contact</a>
     </div>
-</div>
+    <div class="content">
+        <h1><span class="orange-bg">Ervaring</span><br></h1>
+        <p>Welkom in mijn portfolio van gerealiseerde projecten, waar mijn digitale werk tot
+            leven komt.
+            </p>
+     <div class="section">
+        <img src="Ervaring 1.png" alt="Afbeelding 1">
+        <p>Dit is de tekst voor sectie 1.</p>
+     </div>  
+    <div class="section">
+         <img src="Ervaring 2.png" alt="Afbeelding 2">
+          <p>Dit is de tekst voor sectie 2.</p>
+     </div>
+     <div class="section">
+         <img src="Ervaring 3.png" alt="Afbeelding 3">
+         <p>Dit is de tekst voor sectie 3.</p>
+     </div>
+</body>
+</html>
