foto's meer afgestemd

--- a/Opdracht een/Ervaring.html
+++ b/Opdracht een/Ervaring.html
@@ -11,7 +11,7 @@
         <a href="Ervaring.html">Ervaring</a>
         <a href="Profiel.html">Profiel</a>
         <a href="Interessegebied.html">Interessegebieden</a>
-        <a href="#contact">Contact</a>
+        <a href="Contact.html">Contact</a>
     </div>
     <div class="content">
         <h1><span class="orange-bg">Ervaring</span><br></h1>
@@ -19,16 +19,16 @@
             leven komt.
             </p>
      <div class="section">
-        <img src="Ervaring 1.png" alt="Afbeelding 1">
-        <p>Dit is de tekst voor sectie 1.</p>
+        <img src="Ervaring 1.png" alt="Webanalytics">
+        <p>Project Webanalytics</p>
      </div>  
     <div class="section">
-         <img src="Ervaring 2.png" alt="Afbeelding 2">
-          <p>Dit is de tekst voor sectie 2.</p>
+         <img src="Ervaring 2.png" alt=" aid Search">
+          <p>Project Paid Search</p>
      </div>
      <div class="section">
-         <img src="Ervaring 3.png" alt="Afbeelding 3">
-         <p>Dit is de tekst voor sectie 3.</p>
+         <img src="Ervaring 3.png" alt="SEO">
+         <p>Project SEO</p>
      </div>
 </body>
 </html>
