ervaring pagina klaar

--- a/Opdracht een/Ervaring.html
+++ b/Opdracht een/Ervaring.html
@@ -22,7 +22,7 @@
         <img src="Ervaring 1.png" alt="Webanalytics">
         <p>Project Webanalytics</p>
      </div>  
-    <div class="section">
+    <div class="section twee">
          <img src="Ervaring 2.png" alt=" aid Search">
           <p>Project Paid Search</p>
      </div>
