profiel pagina toegevoegd

--- a/Opdracht een/Contact.html
+++ b/Opdracht een/Contact.html
@@ -11,7 +11,7 @@
         <a href="Ervaring.html">Ervaring</a>
         <a href="Profiel.html">Profiel</a>
         <a href="Interessegebied.html">Interessegebieden</a>
-        <a href="#contact">Contact</a>
+        <a href="Contact.html">Contact</a>
     </div>
     <div class="contact-formulier">
         <h2>Heeft u vragen of opmerkingen? Aarzel niet om contact op te nemen.</h2>
