--- a/Opdracht een/Ervaring.html
+++ b/Opdracht een/Ervaring.html
@@ -30,5 +30,10 @@
          <img src="Ervaring 3.png" alt="SEO">
          <p>Project SEO</p>
      </div>
+    </div>
+    <footer>
+        <p>© 2023 Mijn Website</p>
+    </footer>
+    </div>
 </body>
 </html>
